# SQLamarr

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  __version__.py  make_wheel.sh  pyproject.toml  setup.py
.github/workflows/: main.yml
Lamarr/: AbsDataLoader.h  BaseSqlInterface.h  HepMC2DataLoader.h  MCParticleSelector.h  PVFinder.h  PVReconstruction.h  db_functions.h  errorcodes.h  preprocessor_symbols.h
SQLamarr/: AbsDataLoader.h  BaseSqlInterface.h  CleanEventStore.h  GenerativePlugin.h  GlobalPRNG.h  HepMC2DataLoader.h  MCParticleSelector.h  PVFinder.h  PVReconstruction.h  Plugin.h  SQLiteError.h  TemporaryTable.h  Transformer.h  custom_sql_functions.h  db_functions.h  preprocessor_symbols.h
docs/: AbsDataLoader_8cpp.html  AbsDataLoader_8cpp__incl.map  AbsDataLoader_8cpp__incl.md5  AbsDataLoader_8cpp_source.html  AbsDataLoader_8h.html  AbsDataLoader_8h__dep__incl.map  AbsDataLoader_8h__dep__incl.md5  AbsDataLoader_8h__incl.map  AbsDataLoader_8h__incl.md5  AbsDataLoader_8h_source.html  BaseSqlInterface_8cpp.html  BaseSqlInterface_8cpp__incl.map  BaseSqlInterface_8cpp__incl.md5  BaseSqlInterface_8cpp_source.html  BaseSqlInterface_8h.html  BaseSqlInterface_8h__dep__incl.map  BaseSqlInterface_8h__dep__incl.md5  BaseSqlInterface_8h__incl.map  BaseSqlInterface_8h__incl.md5  BaseSqlInterface_8h_source.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  HepMC2DataLoader_8cpp.html  HepMC2DataLoader_8cpp__incl.map  HepMC2DataLoader_8cpp__incl.md5  HepMC2DataLoader_8cpp_source.html  HepMC2DataLoader_8h.html  HepMC2DataLoader_8h__dep__incl.map  HepMC2DataLoader_8h__dep__incl.md5  HepMC2DataLoader_8h__incl.map  HepMC2DataLoader_8h__incl.md5  HepMC2DataLoader_8h_source.html  MCParticleSelector_8cpp.html  MCParticleSelector_8cpp__incl.map  MCParticleSelector_8cpp__incl.md5  MCParticleSelector_8cpp_source.html  MCParticleSelector_8h.html  MCParticleSelector_8h__dep__incl.map  (+162 more)
docs.md/: Creating_the_wheel.md  SQLite3_extensions.md  Tests.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+28 more)
include/SQLamarr/: BasePlugin.h  BaseSqlInterface.h  EditEventStore.h  GenerativePlugin.h  GlobalPRNG.h  PVFinder.h  Plugin.h  Transformer.h  UpdateDBConnection.h  custom_sql_functions.h  db_functions.h
include/SQLamarr/BlockLib/: BlockLib.h  LbParticleId.h
python/SQLamarr/: CleanEventStore.py  EditEventStore.py  GenerativePlugin.py  HepMC2DataLoader.py  MCParticleSelector.py  PVFinder.py  PVReconstruction.py  Pipeline.py  Plugin.py  PyTransformer.py  TemporaryTable.py  UpdateDBConnection.py  __init__.py  _find_CDLL.py  db_functions.py
src/: AbsDataLoader.cpp  BasePlugin.cpp  BaseSqlInterface.cpp  CleanEventStore.cpp  EditEventStore.cpp  GenerativePlugin.cpp  HepMC2DataLoader.cpp  MCParticleSelector.cpp  PVFinder.cpp  PVReconstruction.cpp  Plugin.cpp  TemporaryTable.cpp  UpdateDBConnection.cpp  custom_sql_functions.cpp  db_functions.cpp  main.cpp  python_bindings.cpp  schema.sql  version  version.cpp
src/blib/: LbParticleId.cpp
temporary_data/: README.md
temporary_data/HepMC2-ascii/DSt_Pi.hepmc2/: evt0.mc2  evt1.mc2  evt2.mc2  evt3.mc2  evt4.mc2  evt5.mc2  evt6.mc2  evt7.mc2  evt8.mc2  evt9.mc2
temporary_data/PrimaryVertex/: PrimaryVertexSmearing.db  PrimaryVertexSmearing.sql
test/: test_no_printout.py
