# (c) Copyright 2022 CERN for the benefit of the LHCb Collaboration. 
#                                                                             
# This software is distributed under the terms of the GNU General Public
# Licence version 3 (GPL Version 3), copied verbatim in the file "LICENCE".
#                                                                             
# In applying this licence, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as an Intergovernmental Organization  
# or submit itself to any jurisdiction.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["SQLamarr"]



[project]
name = "SQLamarr"
description = "The stand-alone ultra-fast simulation option for LHCb"
readme = "README.md"

authors = [
  {name = "Lucio Anderlini", email = "Lucio.Anderlini@fi.infn.it"},
  {name = "Matteo Barbetti", email = "Matteo.Barbetti@fi.infn.it"},
  ]

license = {text = "GPL-3"}

keywords = ["lhcb", "fast-simulation", "simulation", "hep", "physics"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
  ]


version = "0.0c5"

dependencies = ["hepmc3"]

[tool.setuptools.package-data]
myModule = ["*.h"]


[project.urls]
"Homepage" = "https://lamarrsim.github.io/SQLamarr/"
"Source" = "https://github.com/LamarrSim/SQLamarr"
